@@ -1,6 +1,6 @@
 <?php
 /**
- * This page destroys the PHP session and the corresponding cookie.
+ * This page calls the team logout function.
  *
  * $Id$
  *
@@ -9,15 +9,5 @@
  */
 
 require('init.php');
-$title = 'Logout';
 
-if ( isset($_COOKIE[session_name()]) ) {
-    setcookie(session_name(), '', time()-42000, '/');
-}
-session_destroy();
-
-require(LIBWWWDIR . '/header.php');
-
-echo "<h1>Logged out</h1>\n\n<p>Successfully logged out.</p>\n\n";
-
-require(LIBWWWDIR . '/footer.php');
+do_logout();
